[tool.poetry]
name = "writer-framework-default"
version = "0.1.0"
description = ""
authors = ["Writer Example <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.6.10"
langchain-community = "^0.3.31"
langchain-anthropic = "^0.3.22"
beautifulsoup4 = "^4.14.2"
langchain = "^0.3.27"
langchain-core = "^0.3.78"
writer = "^1.16.1"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
